# Robo_ICRA

./: .gitignore  README.md
bluesea/launch/: LDS-25BDM.launch  LDS-25BDM_mapping.launch  LDS-50C-2.launch  tcp.launch
bluesea/src/: uart.c
move_decision/proto/: decision.pb.cc  decision.pb.h
rmua_decision/config/: decision.prototxt
rmua_decision/proto/: decision.pb.cc  decision.pb.h
roborts_base/src/: gimbal.cpp  referee_system.cpp
roborts_bringup/launch/: roborts.launch
roborts_costmap/config/: inflation_layer_config.prototxt  static_layer_config.prototxt
roborts_costmap/proto/: static_layer_setting.pb.cc  static_layer_setting.pb.h  static_layer_setting.proto
roborts_costmap/src/: static_layer.cpp
roborts_decision/proto/: decision.pb.cc  decision.pb.h
roborts_detection/armor_detection/: armor_detection_node.cpp  armor_detection_node.h  gimbal_control.cpp  gimbal_control.h
roborts_detection/armor_detection/config/: armor_detection.prototxt
roborts_detection/armor_detection/constraint_set/: constraint_set.cpp  constraint_set.h
roborts_detection/armor_detection/constraint_set/config/: constraint_set.prototxt
roborts_detection/armor_detection/constraint_set/proto/: constraint_set.pb.cc  constraint_set.pb.h  constraint_set.proto
roborts_msgs/: CMakeLists.txt
roborts_msgs/msg/: FriendReferee.msg
roborts_referee/: CMakeLists.txt  package.xml  socket.cpp  sub.cpp
roborts_referee/socket/: socket.h
