<package>
    <name>roborts_referee</name>
    <version>1.0.0</version>
    <description>
        The roborts referee package provides referee system messages for RoboMaster AI Robot
    </description>
    <author>wyt</author>
    <maintainer email="201836020327@mail.scut.edu.com">SouthChinaUniversityOfTechnology</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roborts_msgs</build_depend>
    <build_depend>rospy</build_depend>


    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roborts_msgs</run_depend>
    <run_depend>rospy</run_depend>


    <export>
    </export>

</package>
